# vtk_opencv_cmake_bolierplate

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
